Contract Configurator 1.28.2
- Merged change to improve accuracy of great circle distance in contract distance calculations (thanks pap1723).
- Merged change to fix issues with certain celestial body progress requirements not working correctly for the manned/unmanned checks (thanks SirMortimer).

Contract Configurator 1.28.1
- Fixed incorrect requirement text when FacilityRequirement and maxLevel are used (thanks histalonia).

Contract Configurator 1.28.0
- Support for KSP 1.8

Contract Configurator 1.27.1
- Improved performance of WaypointGenerator's RANDOM_WAYPOINT_NEAR when the min/max distances are very close to each other.
- Fixed issue where too many waypoints can get generated by WaypointGenerator when count > 1.
- Renable backwards compatibility to KSP 1.4.5.

Contract Configurator 1.27.0
- Recompile for KSP 1.6.0
- Added actual and vacuum delta-vee to ReachState.
- Added Expansion requirement.
- Added LAUNCH_SITE sub-node to WaypointGenerator behaviour.
- Added support for LaunchSite class in expressions.
- Added OtherKerbinBiomes() function to return biomes like Baikerbanur biomes.
- Fixed Biome functions to correctly distinguish between KSC biomes and other collider based biomes.
- Fixed issue with sub-parameters sometimes showing as met when they shouldn't.
- Clarified error message when SpawnPassengers is omitted from a contract that requires it.

Contract Configurator 1.26.0
- Recompile for KSP 1.5.1
- Updated to work with RemoteTech 1.8.13+ (thanks PiezPiedPy).
- Added trig functions to expression langugage (thanks VaPal).
- Invalid Celestial Bodies constants no longer throw an error on parsing (improves overall support for planet packs that remove/rename planets).
- Fixed a bug that prevented casting from string to ExperienceTrait.
- Fixed an issue affecting CollectScience and biomes with spaces (thanks mpharoah).

Contract Configurator 1.25.0
- Added ExperienceTrait to parser.